[tool.poetry]
name = "gpx_orientation"
version = "0.1.0"
description = "Plot bearings of gpx track on radar chart"
authors = ["sgelb <stephan.halbritter@haw-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.8"
gpxpy = "^1.4.2"
matplotlib = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
